// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectDetail page should render all the details of a given project, including its live link if it has one 1`] = `
Array [
  <header
    className="mt-3"
  >
    <a
      className="text-decoration-none"
      href="/projects"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      ← Back
    </a>
  </header>,
  <hr />,
  <article
    className="portfolio-intro portfolio-project"
  >
    <div
      className="row"
    >
      <div
        className="col-md-9 col-12"
      >
        <h1>
          Project #1
        </h1>
        <div
          className="lead text-dark"
        >
          <p>
            Lorem ipsum dolor sit amet.
          </p>
        </div>
      </div>
      <div
        className="col-md-3 col-12"
      >
        <h6
          className="text-uppercase"
        >
          Technologies
        </h6>
        <ul>
          <li
            data-testid="project-technology"
          >
            Jest
          </li>
        </ul>
        <a
          aria-label="live-link"
          className="btn btn-dark btn-block text-nowrap"
          href="http://example.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          Live Demo
        </a>
        <a
          aria-label="source-link"
          className="btn btn-dark btn-block text-nowrap"
          href="http://example.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          Github Repo
        </a>
      </div>
    </div>
    <hr />
    <img
      alt="Gallery image for \\"Project #1\\""
      className="img-fluid img-thumbnail"
      data-testid="gallery-image"
      src="https://place-hold.it/640x480"
    />
    <img
      alt="Gallery image for \\"Project #1\\""
      className="img-fluid img-thumbnail"
      data-testid="gallery-image"
      src="https://place-hold.it/640x480"
    />
    <img
      alt="Gallery image for \\"Project #1\\""
      className="img-fluid img-thumbnail"
      data-testid="gallery-image"
      src="https://place-hold.it/640x480"
    />
  </article>,
]
`;

exports[`ProjectDetail page should render all the details of a given project, save for its live link if it doesn't have one 1`] = `
Array [
  <header
    className="mt-3"
  >
    <a
      className="text-decoration-none"
      href="/projects"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      ← Back
    </a>
  </header>,
  <hr />,
  <article
    className="portfolio-intro portfolio-project"
  >
    <div
      className="row"
    >
      <div
        className="col-md-9 col-12"
      >
        <h1>
          Project #2
        </h1>
        <div
          className="lead text-dark"
        >
          <p>
            Lorem ipsum dolor sit amet.
          </p>
        </div>
      </div>
      <div
        className="col-md-3 col-12"
      >
        <h6
          className="text-uppercase"
        >
          Technologies
        </h6>
        <ul>
          <li
            data-testid="project-technology"
          >
            Jest
          </li>
        </ul>
        <a
          aria-label="source-link"
          className="btn btn-dark btn-block text-nowrap"
          href="http://example.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          Github Repo
        </a>
      </div>
    </div>
    <hr />
    <img
      alt="Gallery image for \\"Project #2\\""
      className="img-fluid img-thumbnail"
      data-testid="gallery-image"
      src="https://place-hold.it/640x480"
    />
    <img
      alt="Gallery image for \\"Project #2\\""
      className="img-fluid img-thumbnail"
      data-testid="gallery-image"
      src="https://place-hold.it/640x480"
    />
    <img
      alt="Gallery image for \\"Project #2\\""
      className="img-fluid img-thumbnail"
      data-testid="gallery-image"
      src="https://place-hold.it/640x480"
    />
  </article>,
]
`;
